<resources>
    <string name="app_name">My Calc</string>
    <string name="equalsBtn">=</string>
    <string name="sumBtn">+</string>
    <string name="sevenBtn">7</string>
    <string name="eightBtn">8</string>
    <string name="nineBtn">9</string>
    <string name="divisionBtn">/</string>
    <string name="fourBtn">4</string>
    <string name="fiveBtn">5</string>
    <string name="sixBtn">6</string>
    <string name="multiplyBtn">*</string>
    <string name="oneBtn">1</string>
    <string name="twoBtn">2</string>
    <string name="threeBtn">3</string>
    <string name="substBtn">-</string>
    <string name="zeroBtn">0</string>
    <string name="clrBtn">CLR</string>
    <string name="dotBtn">.</string>
</resources>